# generic_magnetometer

./: README.md
fsw/: CMakeLists.txt
fsw/cfs/src/: generic_mag_app.c  generic_mag_device.c  generic_mag_events.h  generic_mag_msg.h
fsw/mission_inc/: generic_mag_perfids.h
fsw/platform_inc/: generic_mag_msgids.h  generic_mag_platform_cfg.h
fsw/src/: generic_mag_app.c  generic_mag_app.h  generic_mag_device.c  generic_mag_device.h  generic_mag_events.h  generic_mag_msg.h  generic_mag_version.h
gsw/GENERIC_MAG/cmd_tlm/: GENERIC_MAG_CMD.txt  GENERIC_MAG_TLM.txt
sim/: CMakeLists.txt
sim/inc/: generic_mag_42_data_provider.hpp  generic_mag_data_point.hpp  generic_mag_data_provider.hpp  generic_mag_hardware_model.hpp
sim/src/: generic_mag_42_data_provider.cpp  generic_mag_data_point.cpp  generic_mag_data_provider.cpp  generic_mag_hardware_model.cpp  generic_mag_sim.cpp
support/: CMakeLists.txt  device_cfg.h  generic_mag_checkout.c  generic_mag_checkout.h
